--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#29B6F6</color>
-    <color name="colorAccent">#EF5350</color>
-    <color name="colorPrimaryDark">#5C6BC0</color>
+    <color name="colorPrimary">#FF7043</color>
+    <color name="colorAccent">#29B6F6</color>
+    <color name="colorPrimaryDark">#EF5350</color>
+    <color name="colorDivider">#ECECEC</color>
 </resources>
