--- a/app/src/main/res/layout/fragment_confirmed.xml
+++ b/app/src/main/res/layout/fragment_confirmed.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ConfirmedFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/confirmed" />
 
 </FrameLayout>
