--- a/app/src/main/res/layout/fragment_delivered.xml
+++ b/app/src/main/res/layout/fragment_delivered.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragment.DeliveredFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:src="@drawable/delivered"
+        />
 
 </FrameLayout>
